# AutoML

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py  preprocessing_deps.py
app/api/endpoints/: auth.py  csv_upload.py  data_preprocessing.py  inference.py  training.py
app/core/: config.py
app/db/: base.py  session.py
app/db/models/: __init__.py  file_model.py  training_job_model.py  user_model.py
app/schemas/: file_validator.py  inference_validator.py  preprocessing_validator.py  training_validator.py  user_validator.py
app/services/: auth_service.py
app/services/data/: handlers.py  load_csv.py  preprocess.py
app/services/inference/: __init__.py  predictor.py
app/services/training/: __init__.py  trainer.py
app/utils/: file_upload_utils.py
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  DataPreviewPage.tsx  InferencePage.tsx  LoginPage.tsx  MetricsPage.tsx  PreprocessPage.tsx  TrainPage.tsx  UploadPage.tsx
tests/: conftest.py  test_auth.py  test_inference.py  test_preprocessing.py  test_training.py  test_upload.py
tests/fixtures/: classification.csv  has_categorical.csv  inference_bad_columns.csv  inference_input.csv  regression.csv  sample.csv
